PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-code-correct-Test-4_9-char_empty/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:9: error: empty character constant
    2 |  char a='';
      |         ^~

return code: 1
